--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,24 @@ form{
     gap: 2rem;
 }
 
+#titulo-page {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#btn-add {
+    margin: 1rem;
+}
+
 .acoes {
     display: flex;
     justify-content: space-around;
+}
+
+.is-nivel {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
 }
